.htaccess + correction mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@ body {
     }
 
 
-    body {
+    html {
         width: 100vw;
         height: 100vh;
 
